--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,168 +1,150 @@
 .page {
-  --gray-rgb: 0, 0, 0;
-  --gray-alpha-200: rgba(var(--gray-rgb), 0.08);
-  --gray-alpha-100: rgba(var(--gray-rgb), 0.05);
-
-  --button-primary-hover: #383838;
-  --button-secondary-hover: #f2f2f2;
-
-  display: grid;
-  grid-template-rows: 20px 1fr 20px;
-  align-items: center;
-  justify-items: center;
-  min-height: 100svh;
-  padding: 80px;
-  gap: 64px;
-  font-family: var(--font-geist-sans);
+  width: 100vw;
 }
 
-@media (prefers-color-scheme: dark) {
-  .page {
-    --gray-rgb: 255, 255, 255;
-    --gray-alpha-200: rgba(var(--gray-rgb), 0.145);
-    --gray-alpha-100: rgba(var(--gray-rgb), 0.06);
+.header {
+  width: 100vw;
+  background-color: #9564aa;
+}
 
-    --button-primary-hover: #ccc;
-    --button-secondary-hover: #1a1a1a;
-  }
+.header__content {
+  padding: 6px 16px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+}
+
+.container__burger {
+}
+.content__burger {
+}
+.burgerMenu {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 23px;
+  height: 14px;
+  cursor: pointer;
+}
+.burgerMenu__line {
+  width: 100%;
+  height: 2px;
+  background-color: #fff;
+  transition: all 0.3s ease;
+}
+.menu {
+  display: none;
+  position: absolute;
+  top: 50px;
+  left: 0;
+  background-color: #f9f9f9;
+  width: 100%;
+  padding: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+.menu__list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.menu__item {
+  margin: 10px 0;
+}
+.link {
+  color: #9564aa;
+  font-size: 18px;
+}
+.container__logo {
+}
+.content__logo {
+}
+.logo {
+  /* filter: drop-shadow(0 0 1px #ffcf2d); */
 }
 
 .main {
+}
+.container__title {
+  width: 100vw;
+  border-bottom: solid rgba(149, 100, 170, 0.2);
+  margin: 15px 20px 23px 20px;
+  padding: 0px 0px 10px 0px;
+}
+.content__title {
+}
+
+.title {
+  font-weight: 700;
+  font-size: 20px;
+}
+
+.container__offers {
+  margin: 0 30px;
+}
+.content__offers {
+}
+
+.card__offers {
+  position: relative;
   display: flex;
-  flex-direction: column;
-  gap: 32px;
-  grid-row-start: 2;
+  flex-direction: row;
+  background-color: #9564aa;
+  border-radius: 10px;
+  padding: 15px 30px;
 }
-
-.main ol {
-  font-family: var(--font-geist-mono);
-  padding-left: 0;
-  margin: 0;
-  font-size: 14px;
-  line-height: 24px;
-  letter-spacing: -0.01em;
-  list-style-position: inside;
-}
-
-.main li:not(:last-of-type) {
-  margin-bottom: 8px;
-}
-
-.main code {
-  font-family: inherit;
-  background: var(--gray-alpha-100);
-  padding: 2px 4px;
-  border-radius: 4px;
-  font-weight: 600;
-}
-
-.ctas {
-  display: flex;
-  gap: 16px;
-}
-
-.ctas a {
-  appearance: none;
-  border-radius: 128px;
-  height: 48px;
-  padding: 0 20px;
-  border: none;
-  border: 1px solid transparent;
-  transition:
-    background 0.2s,
-    color 0.2s,
-    border-color 0.2s;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
+.offer__container {
   justify-content: center;
-  font-size: 16px;
-  line-height: 20px;
-  font-weight: 500;
-}
-
-a.primary {
-  background: var(--foreground);
-  color: var(--background);
-  gap: 8px;
-}
-
-a.secondary {
-  border-color: var(--gray-alpha-200);
-  min-width: 158px;
-}
-
-.footer {
-  grid-row-start: 3;
-  display: flex;
-  gap: 24px;
-}
-
-.footer a {
-  display: flex;
   align-items: center;
-  gap: 8px;
+  background-color: #ffcf2d;
+  padding: 4px 10px;
+  border-radius: 5px;
+}
+.offer__text {
+  font-weight: 700;
+  font-size: 14px;
+}
+.card__text {
+  color: #fff;
+}
+.card__credit {
+  background-color: #ffcf2d;
+  color: #000;
+  border-radius: 99px;
+  font-weight: 700;
+  font-size: 8px;
+  padding: 4px;
+}
+.btn__offers {
+  background-color: #ffcf2d; /* Цвет фона */
+  color: #000; /* Цвет текста */
+  font-weight: 700;
+  font-size: 16px;
+  border: none;
+  padding: 20px 10px; /* Отступы внутри кнопки */
+  border-radius: 10px; /* Скругление углов */
+  cursor: pointer; /* Курсор в виде указателя */
+  transition: background-color 0.3s ease; /* Плавное изменение цвета */
+}
+.checkbox__content {
+}
+.container__premium {
+}
+.btns__container {
+}
+.btn__content {
+}
+.btn {
+}
+.btn__label {
+}
+.icon {
 }
 
-.footer img {
-  flex-shrink: 0;
+/* Медиазапрос для планшетов */
+@media (min-width: 768px) {
 }
 
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  a.primary:hover {
-    background: var(--button-primary-hover);
-    border-color: transparent;
-  }
-
-  a.secondary:hover {
-    background: var(--button-secondary-hover);
-    border-color: transparent;
-  }
-
-  .footer a:hover {
-    text-decoration: underline;
-    text-underline-offset: 4px;
-  }
-}
-
-@media (max-width: 600px) {
-  .page {
-    padding: 32px;
-    padding-bottom: 80px;
-  }
-
-  .main {
-    align-items: center;
-  }
-
-  .main ol {
-    text-align: center;
-  }
-
-  .ctas {
-    flex-direction: column;
-  }
-
-  .ctas a {
-    font-size: 14px;
-    height: 40px;
-    padding: 0 16px;
-  }
-
-  a.secondary {
-    min-width: auto;
-  }
-
-  .footer {
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  .logo {
-    filter: invert();
-  }
+/* Медиазапрос для десктопов */
+@media (min-width: 1024px) {
 }
